// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BookForm correctly with data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Titulo"
        type="text"
        value="Livro 1"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Autor"
        type="text"
        value="Autor 1"
      />
    </div>
  </form>
</div>
`;

exports[`should render BookForm correctly without data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Titulo"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Autor"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;
